# always_on_monitoring_for_hpc

.github/workflows/: makefile.yml
JsonLine/: IMB_blogpost.jsonl  nek5000.jsonl
metric_proxy/: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
metric_proxy/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
metric_proxy/include/: Makefile.am  Makefile.in  tau_metric_proxy_client.h
metric_proxy/src/: Makefile.am  Makefile.in
metric_proxy/src/cli_client/: Makefile.am  Makefile.in  setup.py
metric_proxy/src/cli_client/tauproxyclient/: cli.py
metric_proxy/src/client/: Makefile.am  Makefile.in  metric_client.c  taumetricproxy.pc.in
metric_proxy/src/deploy/: Makefile.am  Makefile.in  setup.py
metric_proxy/src/deploy/admiremon/: cli.py
metric_proxy/src/exporters/: Makefile.am  Makefile.in
metric_proxy/src/exporters/mpi/: Makefile.am  Makefile.in  mpi_wrappers.w
metric_proxy/src/launcher/: Makefile.am  Makefile.in  main.c
metric_proxy/src/profile_inspect/: Makefile.am  Makefile.in  setup.py
metric_proxy/src/profile_inspect/tauprofile/: cli.py
metric_proxy/src/proxy/: Makefile.am  Makefile.in  exporter.c  exporter.h  log.c  log.h  main.c  metrics.c  metrics.h  profile.c  profile.h  server.c  server.h  utils.c  utils.h
metric_proxy/tests/: Makefile.in  client_test.c  mpi_test.c
metric_proxy/utils/: gen_archive.sh
profiles/IMB-IO/: 15721-0.profile  16315-0.profile  16341-0.profile  16374-0.profile  16418-0.profile  16418-2.profile
proxy_overhead/: Makefile  README.md  calibrate.c  measure_ovh.sh  plot_ovh.py  t.c  timer.h
proxy_overhead/PAPER_DATA/: ovh.eps
sc23_appendices_template/: .gitignore  Appendix_template.out  Appendix_template.tex  Makefile  extra-p.tex  proxy.tex  wrapper.tex
wrapper_overhead/: Makefile  README.md  cr.c  interpos.c  measure_interpos.sh  plot_interpos.py  plot_interpos_time_avg.py  timer.c
wrapper_overhead/PAPER_DATA/: interpos.eps  interpos_time.eps
